Fixed whitespace and "whole page is draggable UGH!" issue

--- a/src/css/test.css
+++ b/src/css/test.css
@@ -1,16 +1,7 @@
-* { border: 1px solid red !important; }
-
-body, html{
-  background-color: white;
-  height: 100%;
-  overflow: hidden;
-  margin:0;
-  padding:0;
-} 
-/*stop the whole page to be draggable*/
-body, .container, .main {
-    touch-action: none;
-}
+body{
+    background-color: white;
+    height: 100vh;
+  }
 
 
 
@@ -18,16 +9,16 @@ body, .container, .main {
     display: grid;
     height: 100vh;
     grid-template-rows: .5fr 1fr 1fr .5fr .5fr;
-    grid-template-areas: 
-        "nav"
+    grid-template-areas: "nav"
         "logo"
         "discover"
         "purchased"
         "footer"
     ;
     background-image: url(/assets/images/QuareEyesPopcornBKG_nologo_1.png);
-    
+
 }
+
 
 .logoBox {
     grid-area: logo;
@@ -39,12 +30,10 @@ body, .container, .main {
     height: 50%;
     width: 50%;
 }
-
 .discoverFilmsBox {
     grid-area: discover;
 
 }
-
 .discoverFilmsBox>img {
     height: 50%;
     width: 50%;
@@ -63,28 +52,17 @@ body, .container, .main {
 }
 
 .footer>img {
-    height: 50%;
+    height: 20%;
 }
 
-.slider {
-    /* line them up horizontally */
-    display: flex;
-    aspect-ratio: 16 / 9;
-    /* allow for scrolling */
-    overflow-y: hidden;
+.slider{
     overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    touch-action: pan-x;
-   
 }
- 
-  .slider > img {
-    /* fex shrink make sure the width is honored */
+
+.slider > img {
+    /* make sure the width is honored */
     flex-shrink: 0;
-    width: 40%;
+    width: 50%;
+    float: right;
     height: auto;
-    margin: 1%;
-    border-radius: 25%;
-    box-shadow: 0 2px 15px rgba(#000, 0.2), 0 2px 20px rgba(#000, 0.25);
   }
-  
